16/10/09
version 0.2.700
* removed memory leak from Gosu::Image#to_blob, now writing directly to RSTRING_PTR

12/10/09
version 0.2.666
* added Gosu::Image#to_blob
* to_blob functionality enables Gosu::Images to work with DevIL library

6/10/09
version 0.2.5
* fixed quad_draw flicker bug
* added splice_and_scale (to texplay-contrib.rb)
* now using rake-compiler to run build process

15/9/09
version 0.2.4
* added lsystem
* made lsystem both 1.9.1 and 1.8.6 compatible

11/9/09
version 0.2.3
* added Ruby 1.8.7 compatibility by modifying extconf.rb to define RUBY_19 macro
* and modified compat.h to get rid of feature test (fails on 1.8.7)

8/9/09
version 0.2.2
* fixed color_control bug, action_struct->color was being overwritten (now using a temp).
* fixed faulty error msg where max tex size was being displayed as 1024 but is actually 1022
* added :start_angle parameter to ngon action
* fixed example screen height from 769 to 768
* arity of -1 and 0 now supported for color_control procs
* fixed parameter checks for circle and ngon
* updated documentation to reflect changes, and added details on caching

2/9/09
version 0.2.1
* releasing a gem for TexPlay
* bumped version number so can add add gosu 0.7.14 dependency to github gem
* hopefully gem works on both github and rubyforge
31/8/09
version 0.2.0
* added each iterator
* added alternative to proc for :color_control proc (allowing static linear transforms to pixels)
* no longer segfaulting on windows (no idea why not)
* rewrote EmptyImageStub in ruby, using philomory's code. now alot faster.
* implemented 'shadow' in terms of static :color_control pixel transform
* added more example code demonstrating each iterator (example_each.rb) and new color_control behaviour
  i.e example_color_transform.rb
* should be relatively stable now! 

28/8/09
version 0.1.9.1 (still BETA)
* experimental features: Gosu::Image#dup and Gosu::Image#clone
* also TexPlay::create_blank_image(window, width, height)