@@ -1,0 +1,3 @@
+module TexPlay
+    VERSION = "0.2.710"
+end
